// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests utility functions for days Correctly calculates getBlockColorsForDay 1`] = `
Object {
  "a": "No Color",
  "b": "Orange",
  "c": "Yellow",
  "d": "Green",
  "e": "Red",
  "f": "Blue",
}
`;

exports[`Tests utility functions for days Correctly calculates getBlockColorsForDay 2`] = `
Object {
  "a": "No Color",
  "b": "Yellow",
  "c": "Orange",
  "d": "Tan",
  "e": "Red",
  "f": "Purple",
}
`;

exports[`Tests utility functions for days Correctly calculates getBlockColorsForDay 3`] = `
Object {
  "a": "No Color",
  "b": "Green",
  "c": "Orange",
  "d": "Tan",
  "e": "Purple",
  "f": "Blue",
}
`;

exports[`Tests utility functions for days Correctly calculates getBlockColorsForDay 4`] = `
Object {
  "a": "No Color",
  "b": "Tan",
  "c": "Yellow",
  "d": "Green",
  "e": "Red",
  "f": "Blue",
}
`;

exports[`Tests utility functions for days Correctly calculates getBlockColorsForDay 5`] = `
Object {
  "a": "No Color",
  "b": "Red",
  "c": "Orange",
  "d": "Yellow",
  "e": "Purple",
  "f": "Blue",
}
`;

exports[`Tests utility functions for days Correctly calculates getBlockColorsForDay 6`] = `
Object {
  "a": "No Color",
  "b": "Purple",
  "c": "Orange",
  "d": "Green",
  "e": "Tan",
  "f": "Red",
}
`;

exports[`Tests utility functions for days Correctly calculates getBlockColorsForDay 7`] = `
Object {
  "a": "No Color",
  "b": "Blue",
  "c": "Yellow",
  "d": "Green",
  "e": "Tan",
  "f": "Purple",
}
`;

exports[`Tests utility functions for days Correctly calculates getSchoolDaysThatHaveColor 1`] = `
Array [
  1,
  2,
  4,
  5,
  6,
]
`;

exports[`Tests utility functions for days Correctly calculates getSchoolDaysThatHaveColor 2`] = `
Array [
  1,
  2,
  3,
  5,
  6,
]
`;

exports[`Tests utility functions for days Correctly calculates getSchoolDaysThatHaveColor 3`] = `
Array [
  1,
  2,
  4,
  5,
  7,
]
`;

exports[`Tests utility functions for days Correctly calculates getSchoolDaysThatHaveColor 4`] = `
Array [
  1,
  3,
  4,
  6,
  7,
]
`;

exports[`Tests utility functions for days Correctly calculates getSchoolDaysThatHaveColor 5`] = `
Array [
  1,
  3,
  4,
  5,
  7,
]
`;

exports[`Tests utility functions for days Correctly calculates getSchoolDaysThatHaveColor 6`] = `
Array [
  2,
  3,
  5,
  6,
  7,
]
`;

exports[`Tests utility functions for days Correctly calculates getSchoolDaysThatHaveColor 7`] = `
Array [
  2,
  3,
  4,
  6,
  7,
]
`;
